# POS_Semestralka

./: CMakeLists.txt
klient/: CMakeLists.txt  input.c  input.h  klient.c  menu.c  menu.h  network.c  network.h  threads.c  threads.h
server/: CMakeLists.txt  game.c  game.h  server.c  settings.c  settings.h  shared_state.h  snake.c  snake.h  world.c  world.h
